# dj

./: .gitignore  .mcp.json  .mcpbignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: publish.yml  publish.yml.disabled
examples/: mcp_quickstart.md  nightly_analytics_export.py  post_a_job.py  pull_applications_to_ats.py
py/: SKILL.md  __init__.py  __main__.py  config.json  dj.py  requirements.txt
tests/: conftest.py  test_annotations.py  test_version_sync.py
