[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamitejobs"
version = "1.0.4"
description = "Official Python client for the public Dynamite Jobs Company API — post remote jobs, manage applications, score candidates, pull funnel analytics. CLI, library, Agent Skill, and MCP server in one file."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Dynamite Jobs", email = "developers@dynamitejobs.com" }]
keywords = [
  "dynamitejobs",
  "dynamite-jobs",
  "remote-jobs",
  "remote-work",
  "remote-hiring",
  "remote-first",
  "ats",
  "job-board",
  "hiring",
  "applicants",
  "api",
  "sdk",
  "mcp",
  "agent-skills",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Office/Business",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=0.9"]

[project.urls]
Homepage = "https://github.com/dynamitejobs/dj"
Repository = "https://github.com/dynamitejobs/dj"
Documentation = "https://dynamitejobs.com/developers/"
Changelog = "https://github.com/dynamitejobs/dj/blob/main/CHANGELOG.md"
Issues = "https://github.com/dynamitejobs/dj/issues"
OpenAPI = "https://api.dynamitejobs.com/openapi.json"
"Dynamite Jobs" = "https://dynamitejobs.com/?utm_medium=pypi&utm_source=dynamitejobs&utm_campaign=client-package"
"Post a Job" = "https://dynamitejobs.com/post-a-job?utm_medium=pypi&utm_source=dynamitejobs&utm_campaign=client-package"
"Browse Remote Jobs" = "https://dynamitejobs.com/remote-jobs?utm_medium=pypi&utm_source=dynamitejobs&utm_campaign=client-package"
"Remote First Recruiting" = "https://remotefirstrecruiting.com/?utm_medium=pypi&utm_source=dynamitejobs&utm_campaign=client-package"

[project.scripts]
dj = "dynamitejobs.dj:main"

[tool.hatch.build.targets.wheel]
packages = ["py"]

[tool.hatch.build.targets.wheel.sources]
"py" = "dynamitejobs"
